--- a/1-a/css/styles.css
+++ b/1-a/css/styles.css
@@ -9,7 +9,7 @@ body{
 .caja-ej1a{
     position: relative;
     background: #0F0;
-
+    border: solid 3px black;
     width: 350px;
     height: 300px;
     margin: 10% auto;
